<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clocky</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="dropdown">
        <item>at this time</item>
        <item>after</item>
    </string-array>

    <string name="dropdownprompt">Wake me up</string>
    <string name="safter">Wake me up after</string>
    <string name="sat">Wake me up at</string>
    <string name="title_activity_alarm_after">Wake me up after</string>
    <string name="smeeting">Meeting</string>
    <string name="sschedule">Schedule</string>
    <string name="title_activity_alarm_at">Wake me up at</string>
    <string name="title_activity_meeting">Meeting</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_activity_pick_time">Time Picker</string>
    <string name="sset">Set</string>
    <string name="title_activity_repeat">Repeat</string>
    <string name="repeattext">Repeat on :</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sun">Sunday</string>
    <string name="satur">Saturday</string>
    <string name="sok">OK</string>
    <string name="bsetalarm">Set Alarm</string>
    <string name="title_activity_tone_select">Alarm Tone</string>
    <string name="srb1">Xperia</string>
    <string name="srb2">Rainbow</string>
    <string name="title_activity_alarm_control">Alarm Control</string>

</resources>
