<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Repeat" >

    <TextView
        android:id="@+id/trepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeattext"/>
    
    <CheckBox
        android:id="@+id/cmon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mon"/>
    
    <CheckBox
        android:id="@+id/ctue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tue"/>
    
    <CheckBox
        android:id="@+id/cwed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wed"/>
    
    <CheckBox
        android:id="@+id/cthur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thur"/>
    
    <CheckBox
        android:id="@+id/cfri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fri"/>
    
    <CheckBox
        android:id="@+id/csat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/satur"/>
    
    <CheckBox
        android:id="@+id/csun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"/>
    
    <Button
        android:id="@+id/bok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sok"/>
</LinearLayout>
