<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ToneSelect" >

    <RadioGroup   android:id="@+id/radioAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
      <RadioButton
        android:id="@+id/rb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srb1"/>
    
       <RadioButton 
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srb2"/>
    </RadioGroup>
    <Button
        android:id="@+id/btoneset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bsetalarm"/>"
        
</LinearLayout>
